--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title>Canvas draw</title>
   <style>
    .firstCanvas {
@@ -10,7 +11,7 @@
   </style>
 </head>
 <body>
-    <canvas id="draw" class="firstCanvas" width="200" height="200"></canvas> 
+    <canvas id="draw" class="firstCanvas" width="400" height="400"></canvas> 
     <script src="./index.js"></script>
 </body>
 </html>
